@@ -103,6 +103,26 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Locale
 import|;
 end_import
@@ -188,6 +208,22 @@ operator|.
 name|httpclient
 operator|.
 name|UsernamePasswordCredentials
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|httpclient
+operator|.
+name|auth
+operator|.
+name|AuthPolicy
 import|;
 end_import
 
@@ -1236,6 +1272,48 @@ operator|new
 name|HttpClient
 argument_list|()
 decl_stmt|;
+name|List
+name|authPrefs
+init|=
+operator|new
+name|ArrayList
+argument_list|(
+literal|2
+argument_list|)
+decl_stmt|;
+name|authPrefs
+operator|.
+name|add
+argument_list|(
+name|AuthPolicy
+operator|.
+name|DIGEST
+argument_list|)
+expr_stmt|;
+name|authPrefs
+operator|.
+name|add
+argument_list|(
+name|AuthPolicy
+operator|.
+name|BASIC
+argument_list|)
+expr_stmt|;
+comment|// Exclude the NTLM authentication scheme because it is not supported by this class
+name|client
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|setParameter
+argument_list|(
+name|AuthPolicy
+operator|.
+name|AUTH_SCHEME_PRIORITY
+argument_list|,
+name|authPrefs
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|useProxy
