@@ -7,6 +7,7 @@
 - IMPROVE: Change default cache artifact pattern to handle missing extension (IVY-196) (thanks to Johan Stuyts)
 - IMPROVE: Log messages do not display most specfic resolver name (IVY-170)
 
+- FIX: Ivy fails when downloading from a server that supports NTLM authentication (IVY-213)
 - FIX: problem with cache and returnFirst (IVY-207)
 - FIX: modules splitted across a chain are not handled correctly (IVY-206)
 - FIX: Delivered Ivy files with incomplete last line. (IVY-125) (thanks to Matthias Kilian)
